[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  {name = "Thomas Jaeken", email = "tj2022@hw.ac.uk"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "Python package that allows to model the expected keyrates in a BBM92 protocol based on SPDC pumped with a CW laser."
name = "bbm92_cw"
readme = "README.md"
requires-python = ">=3.7"
version = "0.0.1"

[project.urls]
"Bug Tracker" = "https://github.com/Thomas-Jaeken/BBM92_CW/issues"
"Homepage" = "https://github.com/Thomas-Jaeken/BBM92_CW"
